agregando ultimos contenidos en galeria y optimizando detalles

--- a/press.html
+++ b/press.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">Sobre mi</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./proyect.html">Proyectos</a>
@@ -103,7 +103,7 @@
             <div class="col-12 col-lg-4">
                  <!-- Contemporary Home Now -->
                 <div class="image_container">
-                    <img class="image_img" src="./img/press/contemporaryhomenow.jpg" alt="Revista CAPBA Digital">
+                    <img class="image_img" src="./img/press/contemporaryhomenow.jpg" alt="Contemporary Home Now">
                     <div class="image_overlay image_overlay-solid">
                         <h2 class="image_title">@contemporaryhomenow</h2>
                     </div>
@@ -112,7 +112,7 @@
             <div class="col-12 col-lg-4">
                 <!-- Architecture Now -->
                 <div class="image_container">
-                    <img class="image_img" src="./img/press/architecturenow.jpg" alt="Revista CAPBA Digital">
+                    <img class="image_img" src="./img/press/architecturenow.jpg" alt="Architecture Now">
                     <div class="image_overlay image_overlay-solid">
                         <h2 class="image_title">@architecturenow</h2>
                     </div>
@@ -121,13 +121,21 @@
             <div class="col-12 col-lg-4">
                 <!-- Arquimais Canal -->
                 <div class="image_container">
-                    <img class="image_img" src="./img/press/arquimaiscanal.jpg" alt="Revista CAPBA Digital">
+                    <img class="image_img" src="./img/press/arquimaiscanal.jpg" alt="Arquimais Canal">
                     <div class="image_overlay image_overlay-solid">
                         <h2 class="image_title">@arquimaiscanal</h2>
                     </div>
                 </div>
             </div>
-
+            <div class="col-12 col-lg-4">
+                <!-- Marketing de obras -->
+                <div class="image_container">
+                    <img class="image_img" src="./img/press/mkt-obras.jpg" alt="Marketing de obras">
+                    <div class="image_overlay image_overlay-solid">
+                        <h2 class="image_title">@marketingdeobras</h2>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Gallery Press -->
