--- a/proyect.html
+++ b/proyect.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./about.html">Sobre mi</a>
+                    <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link active" href="./proyect.html">Proyectos</a>
@@ -90,6 +90,26 @@
                 <img class="image_img" src="./img/gallery/SG.jpg" alt="Vivienda SG">
                 <div class="image_overlay image_overlay-solid">
                     <h2 class="image_title">Vivienda SG</h2>
+                </div>
+            </a>
+
+              <!-- Vivienda Cañada - H9 -->
+            <a href="./img/newproyect.jpg" class="image_container newproyect">
+                <!-- <img class="image_img" src="./img/newproyect.jpg" alt="Vivienda Cañada - H9"> -->
+                <i class="fas fa-hard-hat icon_newproyect"></i>
+                <h4 class="title_newproyect">Vivienda Cañada - H9</h4> 
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Proyecto en desarrollos</h2>
+                </div>
+            </a>
+
+             <!-- Vivienda TA -->
+             <a href="./img/newproyect.jpg" class="image_container newproyect">
+                <!-- <img class="image_img" src="./img/newproyect.jpg" alt="Vivienda TA"> -->
+                <i class="fas fa-hard-hat icon_newproyect"></i>
+                <h4 class="title_newproyect">Vivienda TA</h4> 
+                <div class="image_overlay image_overlay-solid">
+                    <h2 class="image_title">Proyecto en desarrollos</h2>
                 </div>
             </a>
 
