--- a/Press/clarinARQ.html
+++ b/Press/clarinARQ.html
@@ -22,41 +22,41 @@
 <body>
     <!-- Header -->
     <header class="header">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid navbar_container">
-            <a class="navbar-brand logo" href="../index.html">
-            <img class="logo_icon" src="../img/logo-1.png" alt="Luciana Gotta">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="../about.html">Sobre mi</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="../proyect.html">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../press.html">Prensa</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Sígueme
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid navbar_container">
+                <a class="navbar-brand logo" href="../index.html">
+                <img class="logo_icon" src="../img/logo-1.png" alt="Luciana Gotta">
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="../about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="../proyect.html">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../press.html">Prensa</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Sígueme
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="https://www.instagram.com/lucianagottaarq/" target="_blank">Instagram</a></li>
+                    </ul>
+                </li>
                 </ul>
-            </li>
-            </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
     <!-- Press Clarin ARQ -->
