--- a/Proyectos/viviendaSG.html
+++ b/Proyectos/viviendaSG.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="../about.html">Sobre mi</a>
+                <a class="nav-link" href="../about.html">About</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link active" href="../proyect.html">Proyectos</a>
