--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="./about.html">Sobre mi</a>
+                <a class="nav-link active" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./proyect.html">Proyectos</a>
