--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">Sobre mi</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./proyect.html">Proyectos</a>
