--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas, vivienda MM"/>
+    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
+    <meta name="copyright" content="Blue Producciones" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Lightbox -->
@@ -60,8 +65,16 @@
 
     <!-- Ficha técnica Vivienda MM -->
     <div class="container container_lt">
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../proyect.html">Proyectos</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Vivienda MM</li>
+            </ol>
+        </nav>
+
         <!-- Ficha -->
-        <h1 class="ficha_title">Vivienda LT10</h1>
+        <h1 class="ficha_title">Vivienda MM</h1>
         <div class="row row_ficha">
             <div class="col-12 col-lg-4 col_ficha">
                 <hr>
@@ -182,6 +195,8 @@
             
         </div>
 
+        <!-- Scroll to top -->
+        <a href="#" class="go-top"><i class="fas fa-chevron-up"></i></a>
 
         <!-- Footer -->
         <div class="row footer">
@@ -194,11 +209,40 @@
                         </div>
                     </div>
                 </footer>
+
+                <!-- Copy Blue Producciones -->
+                <div class="blue_container">
+                    <a href="https://www.blueproducciones.com.ar/" target="_blank">
+                        <!-- Desarrollo -->
+                        <span class="blue_text">Blue Producciones</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 
-
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <!-- Scroll to top -->
+    <script type="text/javascript">
+        $(document).ready(function() {
+			// Show or hide the sticky footer button
+			$(window).scroll(function() {
+				if ($(this).scrollTop() > 200) {
+					$('.go-top').fadeIn(200);
+				} else {
+					$('.go-top').fadeOut(200);
+				}
+			});
+			
+			// Animate the scroll to top
+			$('.go-top').click(function(event) {
+				event.preventDefault();
+				
+				$('html, body').animate({scrollTop: 0}, 100);
+			})
+		});
+    </script>
     <!-- Jquery para lightbox -->
     <script src="../js/lightbox-plus-jquery.min.js"></script>
     <!-- Bootstrap JS -->
