--- a/press.html
+++ b/press.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
+    <meta name="copyright" content="Blue Producciones" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Styles CSS -->
@@ -138,65 +143,6 @@
             </div>
         </div>
 
-        <!-- Gallery Press -->
-        <!-- <div class="gallery_container"> -->
-            <!-- Clarin ARQ -->
-            <!-- <a href="./Press/clarinARQ.html" class="image_container">
-                <img class="image_img" src="./img/press/REVISTA CLARIN ARQ TAPA.jpg" alt="Clarín Arquitectura">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">Clarín ARQ</h2>
-                </div>
-            </a> -->
-
-            <!-- Clarin.com -->
-            <!-- <div class="image_container">
-                <img class="image_img" src="./img/press/clarin.com.jpg" alt="clarín digital">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">clarín.com</h2>
-                </div>
-            </div> -->
-
-            <!-- Capba -->
-            <!-- <a href="./Press/capba.html" class="image_container">
-                <img class="image_img" src="./img/press/REVISTA CAPBA TAPA.jpg" alt="Revista CAPBA">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">Revista Capba</h2>
-                </div>
-            </a> -->
-
-            <!-- Revista Capba.com -->
-            <!-- <div class="image_container">
-                <img class="image_img" src="./img/press/revista_capba.jpg" alt="Revista CAPBA Digital">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">Capba digital</h2>
-                </div>
-            </div> -->
-
-            <!-- Contemporary Home Now -->
-            <!-- <div class="image_container">
-                <img class="image_img" src="./img/press/contemporaryhomenow.jpg" alt="Revista CAPBA Digital">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">@contemporaryhomenow</h2>
-                </div>
-            </div> -->
-
-            <!-- Architecture Now -->
-            <!-- <div class="image_container">
-                <img class="image_img" src="./img/press/architecturenow.jpg" alt="Revista CAPBA Digital">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">@architecturenow</h2>
-                </div>
-            </div> -->
-
-            <!-- Arquimais Canal -->
-             <!-- <div class="image_container">
-                <img class="image_img" src="./img/press/arquimaiscanal.jpg" alt="Revista CAPBA Digital">
-                <div class="image_overlay image_overlay-solid">
-                    <h2 class="image_title">@arquimaiscanal</h2>
-                </div>
-            </div> -->
-        <!-- </div> -->
-
 
         <!-- Footer -->
         <footer>
@@ -207,6 +153,14 @@
                 </div>
             </div>
         </footer>
+
+        <!-- Copy Blue Producciones -->
+        <div class="blue_container">
+            <a href="https://www.blueproducciones.com.ar/" target="_blank">
+                <!-- Desarrollo -->
+                <span class="blue_text">Blue Producciones</span>
+            </a>
+        </div>
     </div>
 
 
