--- a/proyect.html
+++ b/proyect.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
+    <meta name="copyright" content="Blue Producciones" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Styles CSS -->
@@ -125,6 +130,14 @@
                 </div>
             </div>
         </footer>
+
+         <!-- Copy Blue Producciones -->
+         <div class="blue_container">
+            <a href="https://www.blueproducciones.com.ar/" target="_blank">
+                <!-- Desarrollo -->
+                <span class="blue_text">Blue Producciones</span>
+            </a>
+        </div>
     </div>
 
 
