--- a/Press/capba.html
+++ b/Press/capba.html
@@ -8,7 +8,7 @@
     <meta name="description" content="web de la Arquitecta Luciana Gotta" />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Lightbox -->
@@ -26,7 +26,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header fixed-top">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid navbar_container">
@@ -66,6 +66,13 @@
 
     <!-- Press Clarin ARQ -->
     <div class="container container_lt">
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../press.html">Prensa</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Capba</li>
+            </ol>
+        </nav>
 
         <!-- Galeria -->
         <div class="row my-5 mx-0 gallery">
