--- a/Proyectos/viviendaSG.html
+++ b/Proyectos/viviendaSG.html
@@ -8,7 +8,7 @@
     <meta name="description" content="web de la Arquitecta Luciana Gotta" />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Lightbox -->
