--- a/press.html
+++ b/press.html
@@ -143,6 +143,8 @@
             </div>
         </div>
 
+        <!-- Scroll to top -->
+        <a href="#" class="go-top"><i class="fas fa-chevron-up"></i></a>
 
         <!-- Footer -->
         <footer>
@@ -165,7 +167,28 @@
 
 
 
-
+     <!-- Jquery -->
+     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+     <!-- Scroll to top -->
+     <script type="text/javascript">
+         $(document).ready(function() {
+             // Show or hide the sticky footer button
+             $(window).scroll(function() {
+                 if ($(this).scrollTop() > 200) {
+                     $('.go-top').fadeIn(200);
+                 } else {
+                     $('.go-top').fadeOut(200);
+                 }
+             });
+             
+             // Animate the scroll to top
+             $('.go-top').click(function(event) {
+                 event.preventDefault();
+                 
+                 $('html, body').animate({scrollTop: 0}, 100);
+             })
+         });
+     </script>
     <!-- Bootstrap JS -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
