agregando efecto al icon de instagram en about

--- a/about.html
+++ b/about.html
@@ -80,12 +80,13 @@
                 Diseñamos, construimos y administramos nuevas formas de habitar, acordes a nuestro tiempo, con el objetivo de lograr que arquitectura y entorno se vinculen de manera diferente.
                 </p>
 
+                <!-- Contact buttons -->
                 <div class="button_container">
                     <a class="enlace_button" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdGafAte6EiEdGVrToQgJZ8YTGEN8v6jinfcu8aPDN72Wk74w/viewform" >
                         <button class="btn btn-outline-dark button_container-text desktop" type="button">Contacto</button>
                         <button class="btn btn-block btn-outline-dark button_container-text mobile" type="button">Contacto</button>
                     </a>
-                    <a href="https://www.instagram.com/lucianagottaarq/" class="button_container-iconContainer" target="_blank"><i class="fab fa-instagram button_container-icon"></i></a>
+                    <a href="https://www.instagram.com/lucianagottaarq/" class="button_container-iconContainer" target="_blank"><i class="fab fa-instagram button_container-icon"></i></a> 
                 </div>
             </div>
         </div>
