modificaciones en textos, seo y agregado de imagenes en inicio y casa LT10

--- a/Press/capba.html
+++ b/Press/capba.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
