--- a/Press/clarinARQ.html
+++ b/Press/clarinARQ.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
@@ -78,32 +78,13 @@
         <div class="row my-5 mx-0 gallery">
 
              <!-- ============== 01 -->
-            <div class="col-12 mb-4 col_gallery">
+            <!-- <div class="col-12 mb-4 col_gallery">
                 <a href="../img/press/clarinarq/01.jpg" data-lightbox="roadtrip">
-                    <img src="../img/press/clarinarq/01.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                    <img src="../img/press/clarinarq/CLARIN-ARQ.pdf" alt="Vivienda LT10" width="100%" height="100%">
                 </a>
-            </div>
-           
-            <!-- =============== 02 -->
-            <div class="col-12 mb-4 col_gallery">
-                <a href="../img/press/clarinarq/02.jpg" data-lightbox="roadtrip">
-                    <img src="../img/press/clarinarq/02.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </a>
-            </div>
+            </div> -->
+            <iframe src="../img/press/clarinarq/CLARIN-ARQ.pdf" style="width:100%; height:700px;" frameborder="0" ></iframe>
 
-             <!-- =============== 03 -->
-            <div class="col-12 mb-4 col_gallery"> 
-                <a href="../img/press/clarinarq/03.jpg" data-lightbox="roadtrip">
-                    <img src="../img/press/clarinarq/03.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </a>
-            </div>
-
-            <!-- ================ 04 -->
-            <div class="col-12 mb-4 col_gallery">
-                <a href="../img/press/clarinarq/04.jpg" data-lightbox="roadtrip">
-                    <img src="../img/press/clarinarq/04.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </a>
-            </div>
 
         </div>
 
