--- a/Proyectos/viviendaMM.html
+++ b/Proyectos/viviendaMM.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas, vivienda MM"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
@@ -82,7 +82,7 @@
                 <p class="space">_</p>
                 <p>Lugar: Everlinks Club de golf, Luján, Buenos Aires, Argentina.</p>
                 <p>_</p>
-                <p>Fecha de Inicio: Noviembre 2019</p>
+                <p>Fecha de inicio: Noviembre 2019</p>
                 <p>_</p>
                 <p>Fecha de terminación: Diciembre 2019</p> 
                 <p>_</p>
@@ -106,11 +106,11 @@
                 La vivienda intervenida está ubicada en Everlinks Golf & Country Club, en la ciudad de Luján, provincia de Buenos Aires. El terreno de grandes dimensiones permite que este implantada en todo su ancho, como una suma de volúmenes continuos situados paralelos a la calle: área privada, hall y área pública. El resultado, sus espacios principales poseen vistas ininterrumpidas al extenso parque y a la cancha de golf. 
             </p>
             <p>
-                La ampliación consta de una pileta y un sector que incluye un semicubierto. El fin de este ultimo, es evitar las radiaciones solares directas en los grandes ventanales, generar un espacio de sombra para el ocio al aire libre, y completar la imagen inconclusa del conjunto. El desafío, que el sector existente y su ampliación se perciban armónicos desde sus innumerables puntos de observación. 
+                La ampliación consta de una pileta y un sector que incluye un semicubierto. El fin de este ultimo, es evitar las radiaciones solares directas en los grandes ventanales, generar un espacio de sombra para el ocio al aire libre, y completar la imagen inconclusa del conjunto. El desafío: que el sector existente y su ampliación se perciban armónicos desde sus innumerables puntos de observación. 
             </p>
                 
             <p>
-                Luego de la interpretación del proyecto y la detección de sus valores en busca de ser potenciados, se propuso una estructura de metal liviana que “cose” los volúmenes y refuerza la horizontalidad. Esta se vincula con la vivienda a través de uniones puntuales utilizándola como soporte, apoya únicamente en dos columnas alineadas con sectores murarios estratégicamente elegidos para mantener las amplias visuales y generar un carácter atectónico. Dicha atectonicidad, se potencia con el ¨disfraz¨ que la recubre, revestimiento que genera la sensación de estar compuesta por perfiles macizos. Las columnas, únicos elementos que se mantienen “livianos”, modulan el total del área en tres espacios proporcionados a través de un gradiente entre lleno y vacío. El semicubierto, el sector abierto alineado con el hall y entre ambos una pérgola, que propone una percepción distinta del espacio y de la relación entre luces y sombras. 
+                Luego de la interpretación del proyecto y la detección de sus valores en busca de ser potenciados, se propuso una estructura de metal liviana que “cose” los volúmenes y refuerza la horizontalidad. Esta se vincula con la vivienda a través de uniones puntuales utilizándola como soporte. Apoya únicamente en dos columnas alineadas con sectores murarios estratégicamente elegidos para mantener las amplias visuales y generar un carácter atectónico. Dicha atectonicidad, se potencia con el ¨disfraz¨ que la recubre, revestimiento que genera la sensación de estar compuesta por perfiles macizos. Las columnas, únicos elementos que se mantienen “livianos”, modulan el total del área en tres espacios proporcionados a través de un gradiente entre lleno y vacío. El semicubierto, el sector abierto alineado con el hall y entre ambos una pérgola, que propone una percepción distinta del espacio y de la relación, entre luces y sombras. 
             </p>
             
             <p>
@@ -204,8 +204,8 @@
                 <footer>
                     <div class="row about_copy">
                         <div class="col-12 p-0 text-center">
-                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> </p>
+                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> </p>
                         </div>
                     </div>
                 </footer>
