--- a/Proyectos/wyndham.html
+++ b/Proyectos/wyndham.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas, hotel Wyndham"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
@@ -78,11 +78,11 @@
         <div class="row row_ficha">
             <div class="col-12 col-lg-4 col_ficha">
                 <hr>
-                <p>Anteproyecto – Propuesta de Ampliación e integración.</p>
+                <p>Anteproyecto – Propuesta de ampliación e integración.</p>
                 <p class="space">_</p>
                 <p>Lugar: Nordelta, Buenos Aires, Argentina. </p>
                 <p>_</p>
-                <p>Fecha de la Propuesta: Octubre 2018.</p>
+                <p>Fecha de la propuesta: Octubre 2018.</p>
                 <hr>
             </div>
             <div class="col-12 col-lg-8 d-flex align-items-center">
@@ -167,8 +167,8 @@
                 <footer>
                     <div class="row about_copy">
                         <div class="col-12 p-0 text-center">
-                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> </p>
+                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> </p>
                         </div>
                     </div>
                 </footer>
