--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
@@ -26,24 +26,25 @@
     <header class="intro">
         <!-- Carousel Desktop -->
         <div class="intro-slidershow desktop">
-            <img src="./img/carousel/1.jpg" class="slidershow-img">
-            <img src="./img/carousel/2.jpg" class="slidershow-img">
-            <img src="./img/carousel/3.jpg" class="slidershow-img">
-            <img src="./img/carousel/4.jpg" class="slidershow-img">
-            <img src="./img/carousel/6.jpg" class="slidershow-img">
-            <img src="./img/carousel/6b.jpg" class="slidershow-img image">
+            <img src="./img/carousel/1.jpg" class="slidershow-img" alt="Imagenes de viviendas">
+            <img src="./img/carousel/2.jpg" class="slidershow-img" alt="Imagenes de viviendas">
+            <img src="./img/carousel/3.jpg" class="slidershow-img" alt="Imagenes de viviendas">
+            <img src="./img/carousel/4.jpg" class="slidershow-img" alt="Imagenes de viviendas">
+            <img src="./img/carousel/6.jpg" class="slidershow-img" alt="Imagenes de viviendas">
+            <img src="./img/carousel/6b.jpg" class="slidershow-img image" alt="Imagenes de viviendas">
+            <img src="./img/carousel/12.jpg" class="slidershow-img" alt="Imagenes de viviendas">
         </div>
         <!-- Carousel Mobile -->
         <div class="intro-slidershow mobile">
-            <img src="./img/carousel/mobile/4.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/5.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/6.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/10.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/11.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/12.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/14.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/23.jpg" class="slidershow_img-mobile">
-            <img src="./img/carousel/mobile/28.jpg" class="slidershow_img-mobile">
+            <img src="./img/carousel/mobile/4.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/5.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/6.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/10.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/11.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/12.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/14.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/23.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
+            <img src="./img/carousel/mobile/28.jpg" class="slidershow_img-mobile" alt="imagenes de viviendas">
         </div>
 
         <!-- Navbar -->
