--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas, vivienda LT10"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
@@ -82,7 +82,7 @@
                 <p class="space">_</p>
                 <p>Lugar: La Concepción Club de campo, Luján, Buenos Aires, Argentina.</p>
                 <p>_</p>
-                <p>Fecha de Inicio: Abril 2018</p>
+                <p>Fecha de inicio: Abril 2018</p>
                 <p>_</p>
                 <p>Fecha de terminación: Enero 2019</p> 
                 <p>_</p>
@@ -163,6 +163,20 @@
                     <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
                 </a>
             </div> 
+
+            <!-- ================ 07 -->
+            <div class="col-12 col_gallery">
+                <a href="../Proyectos/viviendaLT10/7.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/7.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+            </div>
+
+            <!-- ================ 08 -->
+            <div class="col-12 col_gallery">
+                <a href="../Proyectos/viviendaLT10/8.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/8.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+            </div>
     
             <!-- ================= 07 Plano -->
             <div class="col-12 col_gallery">
@@ -231,8 +245,8 @@
                 <footer>
                     <div class="row about_copy">
                         <div class="col-12 p-0 text-center">
-                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                            <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>Luciana Gotta</strong> </p>
+                            <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>Luciana Gotta</strong> </p>
                         </div>
                     </div>
                 </footer>
