--- a/proyect.html
+++ b/proyect.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="luciana gotta, arquitectura, construccion, casas"/>
-    <meta name="description" content="web de la Arquitecta Luciana Gotta" />
+    <meta name="keywords" content="Luciana Gotta, arquitectura, construccion, casas"/>
+    <meta name="description" content="Estudio de Arquitectura, Arq.Luciana Gotta." />
     <meta name="author" content="Nahuel Stratico, straticonahuel@gmail.com" />
     <meta name="copyright" content="Blue Producciones" />
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
@@ -125,8 +125,8 @@
         <footer>
             <div class="row about_copy">
                 <div class="col-12 p-0 text-center">
-                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
-                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>luciana gotta</strong> / <b>E-mail:</b> arqlucianagotta@gmail.com</p>
+                    <p class="about_copy-text desktop">Copyright 2021 / Arq. <strong>luciana gotta</strong> </p>
+                    <p class="about_copy-text mobile"><i class="far fa-copyright"></i> 2021 / Arq. <strong>luciana gotta</strong> </p>
                 </div>
             </div>
         </footer>
